--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,1 +1,14 @@
+.home {
+  width: 100vw;
+  height: 100%;
+}
 
+/* ---------- home-banner ---------- */
+
+
+/* ---------- home-article ---------- */
+.home-article {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
