--- a/src/style/banner.css
+++ b/src/style/banner.css
@@ -20,8 +20,8 @@
   height: 100%;
   position: relative;
   border-radius: 20px;
-  /* overflow: hidden; */
-  /* background-color: aqua; */
+  overflow: hidden;
+  background-color: aqua;
 }
 .title {
   position: absolute;
