--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #e4e4e4;
   box-shadow: 15px 15px 10px rgb(209, 208, 208); 
 }
 
