--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -2,7 +2,7 @@
   --aside-basic-color: #515151;
   --aside-hover-color: #000000;
 }
-.login{
+.login, .signup{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,7 +27,7 @@
     margin-bottom: 30px;
 }
 
-.input-group{
+.input{
     width: 70%;
 }
 
