--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -14,6 +14,9 @@
   height: 100%;
   display: flex;
   position: sticky;
+  top: 0;
+  background-color: #fff;
+  z-index: 9999;
 }
 
 /* ---------- light-illustration ---------- */
@@ -29,8 +32,7 @@
   display: flex;
   flex-direction: column;
   font-family: 'Noto Sans KR', sans-serif;
-  margin: 0 auto;
-  margin-top: 36px;
+  margin: 30px auto 10px auto;
 }
 
 /* ---------- menu-top ---------- */
