--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,14 +1,11 @@
 .home {
   width: 100vw;
-  height: 100%;
+  overflow: hidden;
 }
-
-/* ---------- home-banner ---------- */
-
 
 /* ---------- home-article ---------- */
 .home-article {
-  width: 100%;
   display: flex;
   flex-direction: column;
+  margin-bottom: 50px;
 }
