--- a/src/style/banner.css
+++ b/src/style/banner.css
@@ -1,17 +1,11 @@
 /* noto sans kr */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&display=swap');
 
-:root {
-  --banner-basic-color: #515151;
-  --banner-hover-color: #000000;
-  --banner-max-width: 1240px;
-}
-
 .banner {
-  width: var(--banner-max-width);
-  height: 300px;
+  width: 100vw;
+  height: 400px;
   margin: 0 auto;
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
 /* ---------- banner-header ---------- */
@@ -19,29 +13,31 @@
   width: 100%;
   height: 100%;
   position: relative;
-  border-radius: 20px;
   overflow: hidden;
   background-color: aqua;
 }
-.title {
+.banner-title {
+  width: 1240px;
   position: absolute;
-  bottom: 0;
+  bottom: 30px;
   left: 0;
+  right: 0;
   color: white;
   font-size: 2rem;
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 400;
+  margin: 0 auto;
+  z-index: 10; /* nav: 999 */
+  cursor: default;
 }
 
-.images {
+.banner-images {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-wrap: wrap;
-
 }
-.images-index {
-  width: 100%;
+.banner-images-index {
+  min-width: 100%;
   height: 100%;
 }
 
