--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   font-family: 'Noto Sans KR', sans-serif;
-  margin: 30px auto 10px auto;
+  margin: 30px auto 20px auto;
 }
 
 /* ---------- menu-top ---------- */
@@ -58,6 +58,7 @@
   font-size: 1rem;
   font-weight: 400;
   margin-left: 12px;
+  text-decoration: none;
   cursor: pointer;
 }
 .menu-help-item:hover {
