--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -4,7 +4,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    height: 100vh;
+}
+.image{
+    width: 100%;
+  height: 100%;
+  z-index: -2;
+  position: absolute;
 }
 .box{
     height: 100px;
@@ -26,7 +32,7 @@
     height: 500px;
     position : absolute;
     top : -20px;
-    background: rgba(214, 5, 5, 0.4);
+    background: rgba(224, 184, 184, 0.4);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
