--- a/src/style/search.css
+++ b/src/style/search.css
@@ -1,53 +1,65 @@
-.search{
-    width: 30px;
-    height: 30px;
-  }
-  
-  .icon{
-    background: url(../images/research.png);
-    display: block;
-    text-indent: -9999em;
-  }
-  
-.none{
-    top : 80%;
-    position: absolute;
-    left : 0;
-    right : 0;
-    padding: 20px 0;
-    text-align: center;
-    display : flex;
-    flex-direction: row;
-    justify-content: center;
-    display: none;
-  }
-  .show{
-    top : 80%;
-    position: absolute;
-    left : 0;
-    right : 0;
-    padding: 20px 0;
-    text-align: center;
-    display : flex;
-    flex-direction: row;
-    justify-content: center;
-    display: flex;
-  }
-  form input[type="text"]
-  {
-    height : 40px;
-    border : none;
-    border-bottom:1px solid #34404b;
-    width: 540px;
-    margin-right : 10px;
-    outline: none;
-  }
-  form input[type="text"]:focus
-  {
-    border-bottom-color:#88bcec;
-  }
-  form input[type="submit"]
-  {
-    margin-top: 10px;
-    border : none;
-  }
+.search {
+  width: 20px;
+  height: 20px;
+}
+
+.icon {
+  background: url(../images/research.png);
+  display: block;
+  text-indent: -9999em;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.none {
+  width: 100vw;
+  height: 0px;
+  top: 120px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  padding: 10px 0;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  opacity: 0;
+  transition: all 0.3s ease-in;
+  cursor: default;
+}
+
+.show {
+  width: 100vw;
+  height: 50px;
+  top: 120px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  padding: 10px 0;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  transition: all 0.3s ease-in;
+  background-color: white;
+}
+
+.searchbox {
+  height: 40px;
+  border: none;
+  border-bottom: 1px solid #34404b;
+  width: 540px;
+  margin-right: 10px;
+  outline: none;
+  background-color: transparent;
+}
+
+.searchbox:focus {
+  border-bottom-color: #88bcec;
+}
+
+.search input[type="submit"] {
+  margin-bottom: 10px;
+  border: none;
+}
