--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -1,76 +1,254 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&display=swap');
 
-.login, .signup{
+.login {
+    --input-focus: #2d8cf0;
+    --font-color: #323232;
+    --font-color-sub: #666;
+    --bg-color: #fff;
+    --bg-color-alt: #666;
+    --main-color: #323232;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  /* switch card */
+  .switch {
+    transform: translateY(-200px);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    width: 50px;
+    height: 20px;
+  }
+  
+  .card-side::before { /*카드 사이드 앞에 요소 추가 ::before이 그런역할*/
+    position: absolute;
+    content: 'Log in';
+    left: -70px;
+    top: 0;
+    width: 100px;
+    text-decoration: underline;
+    color: var(--font-color);
+    font-weight: 600;
+  }
+  
+  .card-side::after { /*얘는 카드 사이드 뒤에 요소 추가*/
+    position: absolute;
+    content: 'Sign up';
+    left: 70px;
+    top: 0;
+    width: 100px;
+    text-decoration: none;
+    color: var(--font-color);
+    font-weight: 600;
+  }
+  
+  .toggle {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider { /*checkbox 뒷 부분*/
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: 2px solid var(--main-color);
+    box-shadow: 4px 4px var(--main-color);
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transition: 0.3s;
+  }
+
+  .image {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 30%; 
+    left: 300px;
+    opacity: 0; /* 처음에는 숨겨진 상태로 설정 */
+  }  
+  
+  .slider:before {
+    box-sizing: border-box;
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    border: 2px solid var(--main-color);
+    border-radius: 5px;
+    left: -2px;
+    bottom: 2px;
+    background-color: var(--bg-color);
+    box-shadow: 0 3px 0 var(--main-color);
+    transition: 0.3s;
+  }
+  
+  .toggle:checked + .slider {
+    background-color: var(--input-focus);
+  }
+
+  .toggle:checked ~ .image {
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out; /* opacity 속성에 트랜지션 효과 적용 */
+  }
+  
+  .toggle:checked + .slider:before {
+    transform: translateX(30px);
+  }
+  
+  .toggle:checked ~ .card-side:before {
+    text-decoration: none;
+  }
+  
+  .toggle:checked ~ .card-side:after {
+    text-decoration: underline;
+  }
+  .toggle:checked ~ .image{
+    visibility: visible;
+  }
+  
+  /* card */ 
+  
+  .flip-card__inner {
+    width: 400px;
+    height: 350px;
+    position: relative;
+    background-color: transparent;
+    perspective: 1000px;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  .toggle:checked ~ .flip-card__inner {
+    transform: rotateY(180deg);
+  }
+  
+  .toggle:checked ~ .flip-card__front {
+    box-shadow: none;
+  }
+  
+  .flip-card__front, .flip-card__back {
+    width: 80%;
+    padding: 20px;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background: rgb(247, 248, 231);
+    border-radius: 5px;
+    border: 2px solid var(--main-color);
+    box-shadow: 4px 4px var(--main-color);
+  }
+  
+  .flip-card__back {
+    width: 90%;
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  
+  .flip-card__input {
+    width: 250px;
+    height: 40px;
+    border-radius: 5px;
+    border: 2px solid var(--main-color);
+    background-color: var(--bg-color);
+    box-shadow: 4px 4px var(--main-color);
+    font-size: 15px;
+    font-weight: 600;
+    color: var(--font-color);
+    padding: 5px 10px;
+    outline: none;
+  }
+  
+  .flip-card__input::placeholder {
+    color: var(--font-color-sub);
+    opacity: 0.8;
+  }
+  
+  .flip-card__input:focus {
+    border: 2px solid var(--input-focus);
+  }
+  
+  .flip-card__btn:active, .button-confirm:active {
+    box-shadow: 0px 0px var(--main-color);
+    transform: translate(3px, 3px);
+  }
+  
+  .flip-card__btn {
+    margin: 20px 0 20px 0;
+    width: 120px;
+    height: 40px;
+    border-radius: 5px;
+    border: 2px solid var(--main-color);
+    background-color: var(--bg-color);
+    box-shadow: 4px 4px var(--main-color);
+    font-size: 17px;
+    font-weight: 600;
+    color: var(--font-color);
+    cursor: pointer;
+  } 
+
+.login{
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
 }
-.image{
-    width: 100%;
-  height: 100%;
-  z-index: -2;
-  position: absolute;
-}
+
 .box{
-    height: 100px;
-}
-
-.login-container{
-  width: 400px;
-  padding : 60px;
-  margin-top: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color : #515151;
-  position: relative;
-}
-
-.blur{
-    width:500px;
-    height: 500px;
-    position : absolute;
-    top : -20px;
-    background: rgba(224, 184, 184, 0.4);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    z-index: -1;
-}
-
-.login-container > h2{
-    font-family: 'Noto Sans KR', sans-serif;
-    font-size: 2rem;
-    margin-bottom: 30px;
-    font-style: 500;
+    height: 250px;
 }
 
 .input{
     width: 70%;
+    animation: warning .3s ease; 
 }
 
-.input-group > input{
-    width: 100%;
-    height: 48px;
-    padding: 0 10px;
-    box-sizing: border-box;
-    margin-bottom: 16px;
-    border-radius: 6px;
-    background-color: #F8F8F8;
-}
-.input-group > input::placeholder{
-    color: #D2D2D2;
-}
-.input-group > input[type="submit"]{
-    color: #fff;
-    font-size: 16px;
-    background-color: #6A24FE;
-    margin-top: 20px;
+.input-group {
+  display: flex;
+  flex-direction: row; /* 가로로 정렬 */
+  align-items: center; /* 수직 가운데 정렬 */
+  gap: 10px; /* 요소들 사이의 간격 설정 */
 }
 
-.input-group > label{
-    color: #999999;
+.input-group > label {
+  color: #999999;
+  width: 100px;
 }
+
+.input-group > input {
+  width: 100%;
+  height: 48px;
+  padding: 0 10px;
+  box-sizing: border-box;
+  border-radius: 6px;
+  background-color: #F8F8F8;
+}
+
+.input-group > input::placeholder {
+  color: #D2D2D2;
+}
+
+.input-group > input[type="submit"] {
+  color: #fff;
+  font-size: 16px;
+  background-color: #b08eff;
+}
+
+
