--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -111,9 +111,9 @@ label {
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: rgb(204, 204, 204);
   border-radius: 30px;
   cursor:pointer;
+  background: url("../images/bg.jpg")
 }
 
 .switch {
