--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -11,11 +11,12 @@
 
 .header {
   width: 100vw;
-  height: 100%;
+  height: 150px;
   display: flex;
   position: sticky;
   top: 0;
   background-color: #fff;
+  border-bottom: 1px solid var(--header-basic-color);
   z-index: 9999;
 }
 
