--- a/src/style/light.css
+++ b/src/style/light.css
@@ -1,47 +1,62 @@
 :root {
-  --펜던트-size: 50px;
-  --플로어-size: 50px;
+  --펜던트-size: 30px;
+  --플로어-size: 30px;
+  --black: #000;
 }
 
 .light {
   position: absolute;
-  z-index: 9999;
+  z-index: 99999;
 }
 
 .펜던트 {
   top: 0;
   left: 100px;
   width: 0;
-  height: 50px;
-  border: 1px solid #000;
+  height: 40px;
+  border: 1px solid var(--black);
 }
 .펜던트::before {
   content: '';
   position: absolute;
-  top: 50px;
+  top: 40px;
   left: calc((var(--펜던트-size) / 2) * -1);
   width: var(--펜던트-size);
   height: var(--펜던트-size);
   border-radius: 50%;
-  background-color: antiquewhite;
+  background-color: var(--black);
 }
 
 .플로어 {
   top: 50px;
   left: 100px;
-  width: 50px;
+  width: 0;
   height: 100px;
-  border-top: 1px solid #000;
-  border-left: 1px solid #000;
-  border-radius: 20% 20% 0 0;
+  border: 1px solid  var(--black);
 }
 .플로어::before {
   content: '';
   position: absolute;
-  top: 10px;
-  left: calc(var(--플로어-size) / 2);
+  top: -10px;
+  left: calc(var(--플로어-size) / 2 * -1 + 10px);
   width: var(--플로어-size);
-  height: var(--플로어-size);
-  border-radius: 50%;
-  background-color: antiquewhite;
+  height: calc(var(--플로어-size) * 1.2);
+  background-color:  var(--black);
+  border-radius: 5px;
+  transform: rotate(0deg) skew(20deg);
+}
+.플로어::after {
+  content: '';
+  position: absolute;
+  top: -10px;
+  left: calc(var(--플로어-size) / 2 * -1 + -10px);
+  width: var(--플로어-size);
+  height: calc(var(--플로어-size) * 1.2);
+  background-color:  var(--black);
+  border-radius: 5px;
+  transform: rotate(0deg) skew(-20deg);
+}
+
+.테이블 {
+  bottom: 0;
 }
