--- a/src/style/search.css
+++ b/src/style/search.css
@@ -5,7 +5,7 @@
 
 .icon {
   background: url(../images/research.png);
-  display: block;
+  order:1; /* 부모와 자식의 순서를 거역하는 용도 */
   text-indent: -9999em;
   background-repeat: no-repeat;
   background-position: center;
@@ -15,28 +15,25 @@
 
 .none {
   width: 100vw;
-  height: 0px;
-  top: 120px;
+  height: 0;
+  top: 150px;
   position: absolute;
   left: 0;
   right: 0;
   padding: 10px 0;
   text-align: center;
-  display: flex;
   flex-direction: row;
   justify-content: center;
-  opacity: 0;
   transition: all 0.3s ease-in;
   cursor: default;
   align-items: flex-end;
-  visibility: hidden;
   z-index: -1; /* header에 category보다 낮은 위치에 */
 }
 
 .show {
   width: 100vw;
   height: 50px;
-  top: 120px;
+  top: 150px;
   position: absolute;
   left: 0;
   right: 0;
@@ -47,11 +44,12 @@
   justify-content: center;
   transition: all 0.3s ease-in;
   background-color: white;
+  border-top: 1px solid #515151;
   align-items: flex-end;
   cursor: default;
 }
 
-.searchbox {
+.search-box {
   height: 30px;
   border: none;
   border-bottom: 1px solid #34404b;
@@ -61,7 +59,7 @@
   background-color: transparent;
 }
 
-.searchbox:focus {
+.search-box:focus {
   border-bottom-color: #88bcec;
 }
 
