--- a/src/style/Help.css
+++ b/src/style/Help.css
@@ -15,29 +15,29 @@
     margin: 60px 0;
   }
 
-  h1 {
+  .Help h1 {
     font-size: 2rem;
   }
   
-  table {
+  .Help table {
     width: 64%;
     border-collapse: collapse;
   }
   
-  th, td {
+  .Help th, td {
     border: 1px solid #ccc;
     padding: 8px;
     text-align: center;
   }
   
-  th {
+  .Help th {
     background-color: #f2f2f2;
   }
   
-  tr:nth-child(even) {
+  .Help tr:nth-child(even) {
     background-color: #f2f2f2;
   }
   
-  tr:nth-child(odd) {
+  .Help tr:nth-child(odd) {
     background-color: #fff;
   }
