--- a/src/style/HelpDetail.css
+++ b/src/style/HelpDetail.css
@@ -15,17 +15,17 @@
     margin: 60px 0;
   }
 
-h2 {
+.HelpDetail h2 {
   font-size: 24px;
   margin-bottom: 10px;
 }
 
-h3 {
+.HelpDetail h3 {
   font-size: 20px;
   margin-bottom: 10px;
 }
 
-p {
+.HelpDetail p {
   font-size: 16px;
   margin-bottom: 15px;
 }
