--- a/src/style/HelpDetail.css
+++ b/src/style/HelpDetail.css
@@ -1,23 +1,38 @@
 :root {
-    --Mypage-basic-color: #515151;
-    --Mypage-basic-width: 1240px;
-    --Mypage-blue-color: #E5E5E5;
-    --Mypage-white-color: #EDE8D7;
-    --Mypage-orange-color: #FFEEC0;
-  }
+  --Mypage-basic-color: #515151;
+  --Mypage-basic-width: 1240px;
+  --Mypage-blue-color: #E5E5E5;
+  --Mypage-white-color: #EDE8D7;
+  --Mypage-orange-color: #FFEEC0;
+}
 
-  .HelpDetail {
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 60px 0;
-  }
+.HelpDetail {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 60px 0;
+}
 
 .HelpDetail h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
+  margin: 20px;
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+
+.HelpDetail .post-details {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  border: 1px solid var(--Mypage-blue-color);
+  padding: 10px;
+  margin: 20px 0;
+}
+
+.HelpDetail .post-details .post-detail {
+  flex: 1;
+  text-align: center;
 }
 
 .HelpDetail h3 {
@@ -25,7 +40,7 @@
   margin-bottom: 10px;
 }
 
-.HelpDetail p {
+.HelpDetail .post-content p {
   font-size: 16px;
-  margin-bottom: 15px;
+  margin: 20px 0;
 }
