--- a/src/style/basket.css
+++ b/src/style/basket.css
@@ -1,15 +1,17 @@
   .basket {
     margin-top: 20px;
-    width: 800px;
+    width: 900px;
     background: #f7f7f7;
     padding: 20px;
   }
-  
-  .basket form {
-    width: 100%;
-    max-width: 800px;
+  .basket_container {
     display: flex;
-    flex-direction: row;
+    width: 100%;
+  }
+  
+  .basket .left {
+    width: 100%;
+    width:60%;
     background: #fff;
     border: 1px solid #d3d3d3;
     padding: 20px;
@@ -84,7 +86,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 50%;
     max-width: 360px;
     background: #fff;
     border: 1px solid #d3d3d3;
