--- a/src/style/MyPage.css
+++ b/src/style/MyPage.css
@@ -18,18 +18,30 @@
   margin: 60px 0;
 }
 
+.profileContent{
+  width: 604px;
+  height: 120px;
+  position: relative;
+}
 .profileImage{
+  position: absolute;
+  left: 10px;
+  top: 0;
   width : 100px;
   height : 100px;
   border-radius: 50%;
   background-color: rgb(146, 146, 146);
 }
 
-.profileContent{
+.my-info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-left: 20px;
+  position: absolute;
+  left: 200px;
+}
+.my-info-text {
+  margin-bottom: 12px;
 }
 
 .filter-category {
