--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -22,8 +22,7 @@
 
 /* ---------- light-illustration ---------- */
 .light-illustration {
-  position: absolute;
-
+  width: 200px;
 }
 
 /* ---------- menu ---------- */
