--- a/src/style/banner.css
+++ b/src/style/banner.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&display=swap');
 
 :root {
-  --banner-arrow-color: #d8d8d8;
+  --banner-arrow-color: #f5f5f5;
   --banner-basic-color: #515151;
   --banner-arrow-size: 30px;
   --banner-max-width: 1240px;
@@ -28,7 +28,7 @@
   bottom: 30px;
   left: 50px;
   right: 0;
-  color: var(--banner-basic-color);
+  color: var(--banner-arrow-color);
   font-size: 21px;
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 400;
@@ -58,6 +58,7 @@
   height: 100%;
   border-radius: 20px;
   margin: 0 5px;
+  cursor: pointer;
 }
 
 .banner-arrow {
