--- a/src/style/Products.css
+++ b/src/style/Products.css
@@ -139,3 +139,13 @@
   border: 1px solid rgba(81, 81, 81, 0.2);
   background-color: var(--products-orange-color);
 }
+
+/* ---------- loading ---------- */
+.products-loading {
+  font-size: 2rem;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: 500;
+  color: #7f7f7f;
+  opacity: 0.6;
+  margin: 100px auto;
+}
