--- a/src/style/search.css
+++ b/src/style/search.css
@@ -5,7 +5,7 @@
 
 .icon {
   background: url(../images/research.png);
-  order:1; /* 부모와 자식의 순서를 거역하는 용도 */
+  order: 1; /* 부모와 자식의 순서를 거역하는 용도 */
   text-indent: -9999em;
   background-repeat: no-repeat;
   background-position: center;
@@ -91,25 +91,32 @@
   height: 0;
   transition: all 0.3s ease-in;
   z-index: -3;
+  overflow: hidden;
+  transition: hidden 0s ease-in;
 }
 
 .search-result-item-show {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 580px;
   height: 50px;
   transition: all 0.3s ease-in;
   margin-top: 10px;
   text-indent: 0;
   z-index: 2;
+  cursor: pointer;
 }
 .search-result-item-show:first-child {
   margin-top: 100px;
 }
 
 .item-name {
+  min-width: 100px;
+  max-width: 100px;
+  border-right: 1px solid black;
   font-size: 1rem;
 }
 .item-description {
-  margin-left: 200px;
   font-size: 0.8rem;
 }
